<resources>
    <string name="app_name">Akcelerometr</string>
    <string name="title_activity_akcelometr">Akcelerometr</string>
    <string name="title_activity_linearni_akcelometr">Linearni Akcelerometr</string>
    <string name="title_activity_sensory">Senzory</string>
    <string name="title_activity_settings">Nastavení</string>
    <string name="informace_o_telefonu">Telefon</string>
    <string name="Hlavni_Nadpis">K-206//K-209</string>
    <string name="Card_Nadpis_Mereni">Měření</string>
    <string name="Card_Nadpis_Nastaveni">Nastavení</string>
    <string name="Card_Nadpis_Senzory">Senzory</string>
    <string name="Button_Ulozit">Uložit</string>
    <string name="Title_Activity_Nastaveni">Nastavení</string>
    <string name="CheckBox_Gyroskop">Gyroskop</string>
    <string name="Checkbox_Akcelometr">Akcelerometr</string>
    <string name="CheckBox_Linearni_Akcelometr">Lin. akcelerometr</string>
    <string name="Button_Smazat_soubory">Smazat všechny soubory měření</string>
    <string name="SensorTextViewEmpty">X = 0\n\nY = 0\n\nZ = 0</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="gpsDefaultUIValue">00:00:00:00:00:00</string>
    <string name="defaultSpeedUIValue">0 km/h</string>
</resources>