<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <!--Nadpis-->
    <TextView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Hlavni_Nadpis"
        android:textColor="@color/da_blue"
        android:textStyle="bold"
        android:textSize="50sp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="50dp"
        />
    <!--Grid pro karty-->
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/title_view"
        android:rowCount="3"
        android:columnCount="1">

        <!--Karta Měření-->
        <androidx.cardview.widget.CardView
            android:id="@+id/Mereni"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="15dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="20dp"
            android:outlineSpotShadowColor="@color/da_blue">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Card_Nadpis_Mereni"
                    android:textColor="@color/da_blue"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--Karta Nastavení-->
        <androidx.cardview.widget.CardView
            android:id="@+id/Settings"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_rowWeight="1"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill"
            android:layout_margin="15dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="8dp"
            app:cardElevation="20dp"
            android:outlineSpotShadowColor="@color/da_blue">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Card_Nadpis_Nastaveni"
                    android:textColor="@color/da_blue"
                    android:textSize="40sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--Karta Senzory-->
        <androidx.cardview.widget.CardView
            android:id="@+id/Sensory"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="15dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="20dp"
            app:cardBackgroundColor="@color/white"
            android:outlineSpotShadowColor="@color/da_blue">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_gravity="center_vertical|center_horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Card_Nadpis_Senzory"
                    android:textStyle="bold"
                    android:textSize="40sp"
                    android:textColor="@color/da_blue"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </GridLayout>

</RelativeLayout>