<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <!--Nadpis-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:textColor="@color/da_blue"
        android:text="Měření"
        android:textSize="50sp"
        android:id="@+id/Nadpis"/>

    <!--Checkboxy-->
    <CheckBox
          android:id="@+id/CK1"
          android:layout_width="wrap_content"
          android:layout_height="48dp"
          android:text="@string/CheckBox_Linearni_Akcelometr"
          android:textSize="20sp"
          android:layout_below="@+id/Nadpis"
          android:layout_marginTop="4dp"
          android:textColor="@color/da_blue"
          android:buttonTint="@color/da_blue"
          android:layout_marginStart="10dp" />
    <CheckBox
        android:id="@+id/CK2"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/Checkbox_Akcelometr"
        android:textSize="20sp"
        android:layout_below="@+id/CK1"
        android:layout_marginTop="4dp"
        android:textColor="@color/da_blue"
        android:buttonTint="@color/da_blue"
        android:layout_marginStart="10dp"/>
    <CheckBox
        android:id="@+id/CK3"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="@string/CheckBox_Gyroskop"
        android:textSize="20sp"
        android:layout_below="@+id/CK2"
        android:layout_marginTop="4dp"
        android:textColor="@color/da_blue"
        android:buttonTint="@color/da_blue"
        android:layout_marginStart="10dp"/>

    <!--Nadpisy pro bloky dat-->
    <TextView
        android:id="@+id/Linearni_Akcelometr_Nadpis_Data"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CK3"
        android:layout_marginTop="10dp"
        android:layout_marginStart="35dp"
        android:text="Lin. akcelometr"
        android:textColor="@color/basic"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/Akcelometr_Nadpis_Data"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CK3"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/Linearni_Akcelometr_Nadpis_Data"
        android:text="Akcelometr"
        android:textColor="@color/basic"
        android:textAlignment="center"/>
    <TextView
        android:id="@+id/Gyroskop_Nadpis_Data"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CK3"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_toEndOf="@id/Akcelometr_Nadpis_Data"
        android:text="Gyroskop"
        android:textColor="@color/basic"
        android:textAlignment="center"/>


    <!--Data pro lineární akcelometr-->
    <TextView
        android:id="@+id/laSensorDataX"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CK3"
        android:layout_marginStart="35dp"
        android:layout_marginTop="40dp"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/basic"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/laSensorDataY"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/laSensorDataX"
        android:layout_marginStart="35dp"
        android:layout_marginTop="14dp"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/basic"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/laSensorDataZ"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/laSensorDataY"
        android:layout_marginStart="35dp"
        android:layout_marginTop="14dp"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/basic"
        android:textSize="10sp"/>


    <!--Data pro akcelometr-->
    <TextView
        android:id="@+id/aSensorDataX"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CK3"
        android:layout_toEndOf="@id/laSensorDataX"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/basic"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/aSensorDataY"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aSensorDataX"
        android:layout_toEndOf="@id/laSensorDataY"
        android:layout_marginTop="14dp"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/basic"
        android:textSize="10sp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/aSensorDataZ"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aSensorDataY"
        android:layout_toEndOf="@id/laSensorDataZ"
        android:layout_marginTop="14dp"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/basic"
        android:textSize="10sp"
        android:layout_marginStart="20dp"/>


    <!--Data pro gyroskop-->
    <TextView
        android:id="@+id/gSensorDataX"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CK3"
        android:layout_toEndOf="@id/aSensorDataX"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/basic"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/gSensorDataY"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aSensorDataX"
        android:layout_toEndOf="@id/aSensorDataY"
        android:layout_marginTop="14dp"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/basic"
        android:textSize="10sp"
        android:layout_marginStart="20dp"/>

    <TextView
        android:id="@+id/gSensorDataZ"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/aSensorDataY"
        android:layout_toEndOf="@id/aSensorDataZ"
        android:layout_marginTop="14dp"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/basic"
        android:textSize="10sp"
        android:layout_marginStart="20dp"/>


    <TextView
        android:id="@+id/TimeRunData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TimeRun"
        android:layout_marginTop="18dp"
        android:padding="10dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/nazevSouboru"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_below="@+id/TimeRunData"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="105dp"
        android:layout_marginEnd="105dp"
        android:layout_marginTop="20dp"
        android:hint="Název souboru..."
        android:inputType="text"
        android:outlineSpotShadowColor="@color/da_blue"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/basic" />

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="50dp"
        android:background="@color/da_blue"
        android:shadowColor="@color/da_blue"
        android:text="Start"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/TimeRun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/laSensorDataZ"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="175dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="175dp"
        android:textColor="@color/basic"
        android:text="Čas běhu:" />

    <CheckBox
        android:id="@+id/CK4"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:text="Odeslat soubor o hardwaru"
        android:layout_below="@id/nazevSouboru"
        android:textSize="20sp"
        android:textColor="@color/da_blue"
        android:buttonTint="@color/da_blue"
        android:layout_marginTop="25dp"
        android:layout_marginStart="10dp"/>

</RelativeLayout>